@@ -1,18 +1,17 @@
 package com.example.config;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.ProviderManager;
-import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 
 import com.example.constant.Constants;
@@ -23,9 +22,8 @@ import com.example.security.JwtAuthenticationTokenFilter;
 
 @Configuration
 @EnableWebSecurity
-@EnableAutoConfiguration
-@EnableGlobalMethodSecurity(prePostEnabled = true)
-public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
+@EnableMethodSecurity(prePostEnabled = true)
+public class WebSecurityConfig {
 
 	@Autowired
 	private JwtAuthenticationEntryPoint unauthorizedHandler;
@@ -34,10 +32,8 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 	private JwtAuthenticationProvider authenticationProvider;
 
 	@Bean
-	@Override
-	public AuthenticationManager authenticationManager() throws Exception {
-
-		return new ProviderManager(Arrays.asList(authenticationProvider));
+	public AuthenticationManager authenticationManager() {
+		return new ProviderManager(List.of(authenticationProvider));
 	}
 
 	@Bean
@@ -48,29 +44,19 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 		return authenticationTokenFilter;
 	}
 
-	@Override
-	protected void configure(HttpSecurity httpSecurity) throws Exception {
-		httpSecurity
-				// we don't need CSRF because our token is invulnerable
-				.csrf().disable()
-				// All urls must be authenticated (filter for token always fires (/**)
-				.authorizeRequests()
-				// all resource require Authorization:Bearer
-				// .anyRequest().authenticated().and()
-				// no Authorization Bearer key for /v1/liveStatus
-				.antMatchers(Constants.URL_LIVE_STATUS).permitAll()
-				// Authorization Bearer key require for all other urls
-				.antMatchers("/" + Constants.VERSION + "/**").authenticated()
-				// and
-				.and()
-				// Call our errorHandler if authentication/authorisation fails
-				.exceptionHandling().authenticationEntryPoint(unauthorizedHandler).and()
-				// don't create session
-				.sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS); // .and()
-		// Custom JWT based security filter
-		httpSecurity.addFilterBefore(authenticationTokenFilterBean(), UsernamePasswordAuthenticationFilter.class);
+	@Bean
+	public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+		http.csrf(csrf -> csrf.disable())
+				.authorizeHttpRequests(auth -> auth
+						.requestMatchers(Constants.URL_LIVE_STATUS).permitAll()
+						.requestMatchers("/" + Constants.VERSION + "/**").authenticated()
+						.anyRequest().authenticated())
+				.exceptionHandling(ex -> ex.authenticationEntryPoint(unauthorizedHandler))
+				.sessionManagement(session ->
+						session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+				.headers(headers -> headers.cacheControl(cache -> cache.disable()));
 
-		// disable page caching
-		httpSecurity.headers().cacheControl();
+		http.addFilterBefore(authenticationTokenFilterBean(), UsernamePasswordAuthenticationFilter.class);
+		return http.build();
 	}
 }
